- ``job.item_category`` is now ``job.specflag``, contains a union of flag fields, and depends on the job type
- ``slab_engraving_type``: correct order of items (last two were swapped)
- ``unitst``: correct return type of ``create_nemesis`` vmethod
- ``world_data``: identify many fields and substructures

# 50.13-r2

# 50.13-r1.1

# 50.13-r1

## Structures
- ``biome_type``: add enum attrs for ``caption`` and ``plant_raw_flags``

# 50.12-r3

## Structures
- name many previously-unknown map-related fields and flag bits
- ``unit_action_data_attack`` (``unit_move_attackst``): identify flags
- ``job_type``: new job class type: "Carving" (for smoothing and detailing)

# 50.12-r2.1

# 50.12-r2

## Structures
- ``plotinfo.hauling``: name fields related to the hauling route panel
- ``plant_tree_info``: define tree body and branch flags
- ``unit``: identify and define many previously unknown fields, types, and enums
- ``activity_event``: identify fields and type values

# 50.12-r1

# 50.11-r7

## Structures
- ``job_skill``: correct ``moodable`` property for several professions
- ``buildings_other``: add correct types for civzone building vectors

# 50.11-r6

## Structures
- ``soundst``: fix alignment

# 50.11-r5

## Structures
- ``occupation``: realigned
- ``service_order_type``: enum defined
- ``service_orderst``: type defined
- ``markup_text_boxst``: updated based on information from Bay12
- ``markup_text_linkst``, ``markup_text_wordst``, ``script_environmentst``: defined
- ``plotinfost``: ``unk23c8_flags`` renamed to ``flags``, updated based on information from Bay12
- ``world_raws``: ``unk_v50_1``, ``unk_v50_2``, ``unk_v50_3`` renamed to ``text_set``, ``music``, ``sound``
- ``soundst``: defined
- ``announcement_alertst``: defined
- ``announcement_alert_type``: enum defined
- ``announcement_type``: added ``alert_type`` enum attribute
- ``alert_button_announcement_id``: now int32_t vector (contains report ids)