@@ -421,19 +421,53 @@
     <global-object name='updatelightstate' type-name='bool'/>
     <global-object name='start_dwarf_count' type-name='int16_t'/>
 
-    <global-object name='translate_name'>
-        <stl-function/> <!-- df::language_name*, std::string&, bool, bool -->
+    <global-object name='job_handlerst_remove_job'>
+        <stl-function/> <!-- void(df::jobst*) -->
     </global-object>
 
     <global-object name='buildingst_completebuild'>
-        <stl-function/> <!-- df::buildingst*, char -->
+        <stl-function/> <!-- void(df::buildingst*, char) -->
     </global-object>
 
     <global-object name='unitst_choptree'>
-        <stl-function/> <!-- df::unitst*, int16_t, int16_t, int16_t -->
+        <stl-function/> <!-- void(df::unitst*, int16_t, int16_t, int16_t) -->
     </global-object>
 
+    <global-object name='unitst_create'>
+        <stl-function/> <!-- df::unitst*() -->
+    </global-object>
 
+    <global-object name='world_summon_unit'>
+        <stl-function/> <!-- void(df::unitst*, df::interaction_effect_summon_unitst*, df:interaction_contextst&, short, short, short) -->
+    </global-object>
+
+    <global-object name='unitst_more_convenient_create'>
+        <stl-function/> <!-- df::unitst*() -->
+    </global-object>
+
+    <global-object name='item_handlerst_create_item'>
+        <stl-function/> <!-- df::itemst(short, short, short, int, int, char)-->
+    </global-object>
+
+    <global-object name='building_handlerst_create_building'>
+        <stl-function/> <!-- df::buildingst(short)-->
+    </global-object>
+
+    <global-object name='buildingst_enddestruction'>
+        <stl-function/> <!-- void(df::buildingst*), char -->
+    </global-object>
+
+    <global-object name='translate_name'>
+        <stl-function/> <!-- void(df::language_name*, std::string&, bool, bool) -->
+    </global-object>
+
+    <global-object name='history_figurest_create'>
+        <stl-function/> <!-- df::history_figurest*() -->
+    </global-object>
+
+    <global-object name='unitst_make_own'>
+        <stl-function/> <!-- void(df::unitst*) -->
+    </global-object>
 </data-definition>
 
 <!--
