@@ -24,6 +24,7 @@ Template for new versions:
 - ``slab_engraving_type``: correct order of items (last two were swapped)
 - ``unitst``: correct return type of ``create_nemesis`` vmethod
 - ``world_data``: identify many fields and substructures
+- added several bay12 exported entry points to list of known globals
 
 # 50.13-r2
 
